# ESP_Drone

./: .gitignore  README.md
AVR/: AvrRoutine.sh
AVR/DroneDriver/: BasicUART.h  DroneDriver.c  DroneDriver.c.save  DroneDriver.elf  DroneDriver.hex  PWM_Driver.h
Arduino_Drone/: Arduino_Drone.ino  ESP8266Node.h  MPU9250_Read.h  MotorContoller.cpp  MotorController.h  PID.h  PID_gains.h  WiFiLogins.h
drone_core/: CMakeLists.txt  package.xml
drone_core/launch/: robot.launch
imu_msgs/: CMakeLists.txt  package.xml
ps3/: CMakeLists.txt  package.xml
ps3/nodes/: joySubPub.py  joystick.py
ps3/scripts/: joysticktest.py
rosserial_msgs/: CMakeLists.txt
rosserial_msgs/msg/: RPY.msg  myTest.msg
view3D/: CMakeLists.txt  package.xml
view3D/launch/: start3D.launch
view3D/nodes/: euler_to_tf.py
